precache: Fix top_resources_count + experiments.

top_resources_count includes resources that were excluded due to the
PrecacheResourceSelection that was chosen for to the field trial group.
This changes it so only selected resources get counted against that cap.

Note that total_resources_count does not have this problem, so nothing
needs to be fixed there.

BUG=696017

Review-Url: https://codereview.chromium.org/2707053005
Cr-Commit-Position: refs/heads/master@{#453051}

Former-commit-id: 3fffa417af5b70accf1fe290b60de87c419be5df